# python-llm-gateway

./: .env.example  .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
docs/adr/: index.md
docs/architecture/: overview.md
docs/development/: tdd.md
docs/reference/: python_llm_gateway.md
src/python_llm_gateway/: __init__.py  main.py
src/python_llm_gateway/api/: __init__.py  router.py
src/python_llm_gateway/api/dependencies/: health_dependencies.py
src/python_llm_gateway/api/endpoints/: health_endpoints.py
src/python_llm_gateway/api/schemas/: health_models.py
src/python_llm_gateway/cache/: __init__.py
src/python_llm_gateway/core/: config.py
src/python_llm_gateway/observability/: __init__.py
src/python_llm_gateway/providers/: __init__.py
src/python_llm_gateway/services/: __init__.py  health_service.py
tests/integration/: test_health_endpoint.py
tests/unit/: test_project_import.py
