[project]
name = "python-llm-gateway"
version = "0.1.0"
description = "FastAPI-based LLM gateway with provider fallback, rate limiting, semantic caching, retries, observability, async requests, and cost tracking."
readme = "README.md"
authors = [
    { name = "Anatolii Stepanchuk", email = "anatole.stevenson@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "uvicorn>=0.47.0",
]

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-anyio>=0.0.0",
    "ruff>=0.15.13",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "--strict-config",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.14"
strict = true
mypy_path = "src"
packages = ["python_llm_gateway"]
